# CppPathTracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  custom_config.h
benchmarking/: 3_balls.glb  suzanne_on_table.glb
benchmarking/benchmark-campaign/: configure.sh  dependency-paths.txt  maincampaign.py
benchmarking/cornell/: boxes_cornell.blend  boxes_cornell.blend1  cornell_boxes.glb  cornell_boxes_2.glb  cornell_boxes_3_balls.glb  cornell_boxes_3_balls_diffuse.glb  cornell_boxes_ball.glb  cornell_boxes_no_roughness.glb  cornell_boxes_one_roughness.glb  cornell_boxes_specular.glb  cornell_boxes_with_glass.glb  cornell_boxes_with_light_mirror.glb  cornell_boxes_with_mirror.glb  cornell_boxes_with_mirror_2.glb  cornell_boxes_with_mirror_2_large.glb  cornell_boxes_with_mirror_2_light.glb  empty_cornell.blend
benchmarking/presentation/: ray_bounce.glb  sending_rays_to_bvh.blend  sending_rays_to_bvh.blend1  sending_rays_to_bvh.glb  sending_rays_to_bvh_applied.blend  sending_rays_to_bvh_applied.blend1
include/: bmp.h  camera.h  color_array.h  config.h  core.h  debug.h  obj.h  onb.h  random.h  ray.h  renderer.h  sampleable.h  scene.h  vec3.h  vec4.h
include/bvh/: aabb.h  bvh.h
include/fileformats/: gltf.h  input_file_format.h  obj.h
include/hitable/: hitable.h  hitable_list.h  moving_sphere.h  sphere.h  triangle.h
include/hitables/: hitable.h  hitable_list.h  moving_sphere.h  sphere.h  triangle.h
include/lights/: light.h  point_light.h
include/materials/: dielectric.h  diffuse_light.h  helpers.h  lambertian.h  material.h  metal.h  pbr.h  principled.h_  uber.h
include/pdfs/: cosinepdf.h  fresnelpdf.h  ggxpdf.h  hitablepdf.h  lightpdf.h  mixturepdf.h  pdf.h  uniformpdf.h
include/textures/: checker_texture.h  image_texture.h  noise_texture.h  texture.h  uv_texture.h
objects/: deformed_cube.mtl  dogecube.mtl
src/: aabb.cpp  bmp.cpp  bvh.cpp  color_array.cpp  debug.cpp  hitable_list.cpp  main.cpp  materials.cpp  obj.cpp  random.cpp  renderer.cpp  sphere.cpp
src/bvh/: aabb.cpp  bvh.cpp
src/fileformats/: gltf.cpp  input_file_format.cpp  obj.cpp
src/hitables/: hitable.cpp  hitable_list.cpp  sphere.cpp  triangle.cpp
src/lights/: point_light.cpp
src/materials/: helpers.cpp  materials.cpp  pbr.cpp  principled.cpp_  uber.cpp
src/textures/: image_texture.cpp  noise.cpp
